--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h3>
-        <lo><a  href="c-phone.html">phone.html</a></lo><br>
+        <lo><a  href="phone.html">phone.html</a></lo><br>
 </body>
 </html>
