--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h3>
         <lo><a  href="phone.html">phone.html</a></lo><br>
+         <lo><a  href="inputtype.html">inputtype.html</a></lo><br>
 </body>
 </html>
