--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h3>
         <lo><a  href="phone.html">phone.html</a></lo><br>
          <lo><a  href="inputtype.html">inputtype.html</a></lo><br>
+        <lo><a href = "form1.html" > form1 </a></lo>
 </body>
 </html>
